--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,160 @@
     transform: rotate(360deg);
   }
 }
+.header {
+  height: 65px;
+  
+  color: #fff;
+  box-shadow: 5px gray;
+  box-shadow: 5px rgb(117, 107, 107);
+
+
+}
+.text-clr{
+  color: #fff;
+
+}
+.bg-purple{
+background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+}
+.header--image {
+  margin-right: 5px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.header--title {
+  font-size: 20px;
+  margin-right: auto;
+}
+.header--project {
+  font-size: 12px;
+  font-weight: 500;
+}
+.forrm {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.main {
+  padding: 36px;
+}
+.form--input {
+  border-radius: 5px;
+  border: 1px solid #d5d4d8;
+  text-indent: 5px;
+}
+.bg-clr {
+  background-color: rgb(153, 129, 141);
+}
+.state--value {
+  border: 1px solid rgb(164, 21, 164);
+  color: #a626d3;
+  background-color: #fff;
+  border-radius: 50px;
+  font-size: 30px;
+  padding: 20px 40px;
+  width: 20%;
+  text-align: center;
+}
+.state {
+  align-content: center;
+}
+.state--title {
+  text-align: center;
+}
+.counter-count {
+  border: 1px solid rgb(116, 16, 16);
+  border-radius: 80px;
+  padding: 40px 40px;
+  background-color: rgb(147, 22, 22);
+  text-align: center;
+}
+.counter-minus {
+  background-color: rgb(63, 63, 147);
+  color: white;
+  border-radius: 30px;
+  padding: px;
+  transform: translate(16px, 12px);
+}
+.counter-plus {
+  background-color: rgb(63, 63, 147);
+  color: white;
+  border-radius: 30px;
+  padding: px;
+  transform: translate(16px, -14px);
+}
+.counter {
+  transform: rotate(90deg);
+}
+.meme--image {
+  max-width: 100%;
+  text-align: center;
+}
+.btn--img {
+  border: 1px solid rgb(116, 16, 16);
+  border-radius: 8px;
+  padding: 10px 50px;
+  background-color: rgb(216, 159, 159);
+  width: 10%;
+  text-align: center;
+}
+.text-clr {
+  color: #672280;
+}
+.main-body {
+  background-color: #032434;
+  padding: 20px;
+}
+.tenzie-cnt {
+  background-color: #f5f5f5;
+  max-width: 800px;
+  border-radius: 8px;
+}
+.h-400 {
+  height: 400px;
+}
+.dice-container {
+  display: grid;
+  gap: 16px;
+  grid-template: auto auto / repeat(5, 1fr);
+}
+.die-face {
+  height: 50px;
+  width: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0px 2px 2px rgb(0, 0, 0, 0.15);
+}
+.pd-100 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.roll--dice {
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5053ff;
+  color: #fff;
+  font-size: 1.2rem;
+}
+.roll--dice:focus {
+  outline: none;
+}
+.roll--dice:active {
+  box-shadow: inset 5px 5px 10px -3px rgb(0, 0, 0, 0.7);
+}
+.die--num {
+  font-size: 2rem;
+}
